--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .brick{
     background-color: blue;
 
@@ -5,22 +6,29 @@
 .row div{
     width: 20px;
     height: 20px;
-    
     display: inline-block;
+    margin-top: -4px;
+
 }
 div .coin{
     background: url('img/coin_by_knux400-daonr3k.gif');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
 
 }
 body{
     background-color: black;
+    margin: 0;
+    padding: 0;
 }
-div .pacman{
+#pacman{
     background: url('img/ClutteredGreatIndianpalmsquirrel-max-1mb.gif');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    
 }
